chore(accessor): stop using deprecated TenantServiceAccessor (#2676)
use ServiceAccessor instead

Also, I deprecated TenantServiceSingleton in favor of new class ServiceAccessorSingleton